tests/snapshot/error/source_locations/expression/update/prefix_to_numeric.exp
SyntaxError: Invalid increment/decrement operand
  ┌ source_locations/expression/update/prefix_to_numeric.js:1:1
  |
1 | ++(Symbol('a'))
  | ^